--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -61,12 +61,13 @@ li{
     max-width:707px;
     height: 597px;
     margin: auto;
+    padding-right: 25px;
 }
 .housetwo{
     width: 100%;
     max-width: 948px;
     height: 800px;
-    margin-left: 25px;
+    
 }
 
 
