--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,5 @@
 @import url(//db.onlinewebfonts.com/c/0d49fc455f4a8951a42daf952412a713?family=Helvetica+Neue);
-ul{
+ol{
     font-family: "Helvetica Neue";
 }
 *{
@@ -13,27 +13,21 @@ a{
 ul,ol{
     list-style-type: none;
 }
-header{
-    max-width: 1920px;
-    width: 100%;
-    background-color: #0020F4;      
-}
 .container{
-    max-width: 1475px;
-    width: 100%;
-    position: fixed;
-    top: 27px;
-    left: 240px;
-    z-index: 1;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    /* max-width:1920px width:100% */
+    max-width: 100%;
+    max-width: 1920px;
+    background-color: #0020F4;
+    
+    
 }
-/* .banner{
+.banner{
+    /* max-width 155px width 100% margin auto padding top color ზედმეტია */
+    max-width: 100%;
     max-width: 115px;
-    width: 100%;
-    padding-top: 40px;
-    padding-left: 240px;
+    margin-left: 240px;
+    margin-top: 40px;
+    color: black;
 }
 ol{
     margin: auto;
@@ -61,7 +55,7 @@ li{
     margin: auto;
     margin-top: -20px;
 }
-.images{
+.containertwo{
     display: flex;
     margin-left: 240px;
     margin-top: 280px;
@@ -69,71 +63,18 @@ li{
     
 }
 .house{
-    max-width:707px;
     width: 100%;
+    max-width:707px;
     height: 597px;
     margin: auto;
     padding-right: 25px;
 }
 .housetwo{
-    max-width: 948px;
     width: 100%;
+    max-width: 948px;
     height: 800px;
     
 }
 
-
- */
- .navbar,
-.navbar-ul,
-.navbar-li{
-    display: inline-block;
-
-}
-.navbar{
-    padding-top: 37px;
-}
-
-.navbar-li{
-    padding-right: 50px;
-}
-
-
-
-nav>ul>li>a{
-    color:#FFFFFF;
-    font-size: 16px;
-    line-height: 18px;
-    font-family: Helvetica;
-}
-.images{
-    
-     padding-left: 240px;
-     display: inline-block;
-        /* margin: auto; */
-    }
-        
-.house{
-    position: sticky;
-     top: 280px;
-     left: 240px;
-     max-width: 707px;
-     width: 100%;
-    border-radius: 15px;
-    padding-right: 25px;
-    padding-bottom: 150px;
-    padding-top: 280px;
-    }
-    
-.housetwo{
-    position: sticky;
-    top: 215px;
-    left: 972px;
-    border-radius: 15px;
-    max-width: 948px;
-    width: 100%;
-    padding-top: 215px;
-        
-}
 
 
